# WeathEasy

./: .dockerignore  .example.env  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  compose.dev.yml  pyproject.toml
examples/docker-compose/: README.md  cfs2-updater.dockerfile  compose.yml
examples/docker-compose/cron.d/: weatheasy
scripts/: lock.py
src/weatheasy/: __init__.py  __main__.py  const.py  download.py  error.py  util.py  version.py
src/weatheasy/web/: __init__.py  config.py  controller.py  models.py
